--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["okunnig <okunnig@noreply>"]
 edition = "2018"
 
+[profile.release]
+lto = true
+
 [dependencies]
 minifb = "0.11.2"
 rand = "0.7.0"
+rayon = "1.1.0"
